--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,7 +47,7 @@
             </mdb-carousel-item>
             <!-- Slide 2 -->
             <mdb-carousel-item style="height:1300px;width:100%">
-                <img style="object-fit: cover;height:100%" class="d-block w-100" src="https://live.staticflickr.com/65535/51854555649_66ceff7d88_k.jpg" alt="Second slide">
+                <img style="object-fit: cover;height:100%" class="d-block w-100" src="https://live.staticflickr.com/65535/51853266387_9aa3f5f548_b.jpg" alt="Second slide">
             </mdb-carousel-item>
             <!-- Slide 3 -->
             <mdb-carousel-item style="height:1300px;width:100%">
@@ -61,14 +61,18 @@
             <mdb-carousel-item style="height:1300px;width:100%">
                 <img style="object-fit: cover;height:100%" class="d-block w-100" src="https://live.staticflickr.com/65535/51854305488_3006164982_k.jpg" alt="Second slide">
             </mdb-carousel-item>
+            <!-- Slide 6 -->
+            <mdb-carousel-item style="height:1300px;width:100%">
+              <img style="object-fit: cover;height:100%" class="d-block w-100" src="https://live.staticflickr.com/65535/51854884850_aa5529573d_h.jpg" alt="Second slide">
+            </mdb-carousel-item>
 
         </mdb-carousel>
 
         <!---->
         <div>
             
-            <div class="heading" style="display: flex; justify-content: center; ">TUT Online Orientation</div>
-            <p style="text-align: center; display: flex; justify-content: center;font-weight:normal; color: white; font-size: 2vw;text-align: center;"> for first time entering students.</p>
+          <div class="heading" style="text-align: center;line-height: 0.8; display: flex; justify-content: center;font-size: 6vw;  text-shadow: 2px 2px #0d4794; color: rgb(255, 255, 255);">TUT Online Orientation</div>
+          <p style="text-align: center; display: flex; justify-content: center;font-weight:normal; text-shadow: 2px 2px #0d4794; color: rgb(255, 255, 255);text-shadow: 5; font-size: 3vw;text-align: center;font-weight: 700;"> for first time entering students.</p>
             
 
         </div>
