--- a/src/app/student/sign-in/sign-in.component.html
+++ b/src/app/student/sign-in/sign-in.component.html
@@ -4,7 +4,7 @@
 <div class="container page-container">
 
     <mat-card style="box-shadow: none;background-color: rgba(240, 248, 255, 0);">
-        <div class="heading" style="text-align: center;line-height: 0.8; text-shadow: 2px 2px #ff0000;display: flex; justify-content: center;font-size: 4vw; color: rgb(167, 179, 247);font-weight:500;margin-top: 5%; margin-bottom: 5%;">TUT Online Orientation</div>
+        <div class="heading" style="text-align: center;line-height: 0.8;display: flex; justify-content: center;font-size: 4vw; text-shadow: 2px 2px #0d4794; color: rgb(255, 255, 255);;font-weight:500;margin-top: 5%; margin-bottom: 5%;">TUT Online Orientation</div>
 
         <div class="wrapper fadeInDown">
             <div id="formContent" style="border-radius: 25px; padding-left: 2%;padding-right: 2%;">
