--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -1,5 +1,5 @@
 <img src="../../../assets/img/pexels-keira-burton-6084268.jpg" style="z-index: -2;object-fit: cover;position: absolute;width: 100%;height: 100vh;">
-<div class="heading" style=" text-align: center;line-height: 0.8; text-shadow: 2px 2px #ff0000;display: flex; justify-content: center;font-size: 4vw; color: rgb(167, 179, 247);font-weight:500;margin-top: 5%; margin-bottom: 5%;">TUT Online Orientation</div>
+<div class="heading" style=" text-align: center;line-height: 0.8;text-shadow: 2px 2px #0d4794; color: rgb(255, 255, 255);display: flex; justify-content: center;font-size: 4vw;font-weight:500;margin-top: 5%; margin-bottom: 5%;">TUT Online Orientation</div>
 
 <div *ngIf="!stepTwo" class="container page-container" style="background-color: white;width: 30rem;border-radius: 25px;margin-top: 2%;box-shadow: 10px 24px 70px -18px rgba(0, 0, 0, 0.32);">
 
