--- a/src/app/survey/arts-survey/arts-survey.component.html
+++ b/src/app/survey/arts-survey/arts-survey.component.html
@@ -82,12 +82,14 @@
       <div>
         <button mat-button matStepperPrevious>Back</button>
         <button mat-button matStepperNext (click)="submitSurvey()">Next</button>
+        <a mat-raised-button href="https://docs.google.com/forms/d/e/1FAIpQLSewPSN9OTdD_3nlKyIaYJAtLIL9WyCwFSlFqFeYcsOznEciuQ/viewform?fbzx=-2569970985212661489" target="_blank">Collect Certificate</a>
       </div>
     </div>
-
+    
     <div *ngIf="submitted">
       <h4>You submitted successfully!</h4>
       <button class="btn btn-success" (click)="newSurvey()">Add</button>
     </div>
+
 
 </form>
