--- a/src/app/survey/ict-emalahleni-survey/ict-emalahleni-survey.component.html
+++ b/src/app/survey/ict-emalahleni-survey/ict-emalahleni-survey.component.html
@@ -77,6 +77,8 @@
           <div>
             <button mat-button matStepperPrevious>Back</button>
             <button mat-button matStepperNext (click)="submitSurvey()">Next</button>
+            <a mat-raised-button href="https://docs.google.com/forms/d/e/1FAIpQLSewPSN9OTdD_3nlKyIaYJAtLIL9WyCwFSlFqFeYcsOznEciuQ/viewform?fbzx=-2569970985212661489" target="_blank">Collect Certificate</a>
+
           </div>
         </div>
   
