--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,27 +43,27 @@
         <mdb-carousel style="position:absolute;z-index: -2;height:120%;width:100%;margin-top: -10%;color: rgb(255, 255, 255);" [animation]="'fade'">
             <!-- Slide 1 -->
             <mdb-carousel-item style="height:1300px;width:100%;">
-                <img style="object-fit: cover; height:100%;width:100%;" src="https://dh2dlbjd2qx17.cloudfront.net/img/Orientation-blurred.jpg" alt="First slide">
+                <img style="object-fit: cover; height:100%;width:100%;" src="../../../assets/img/ori31 (26 of 32).jpg" alt="First slide">
             </mdb-carousel-item>
             <!-- Slide 2 -->
             <mdb-carousel-item style="height:1300px;width:100%">
-                <img style="object-fit: cover;height:100%" class="d-block w-100" src="https://live.staticflickr.com/65535/51853266387_9aa3f5f548_b.jpg" alt="Second slide">
+                <img style="object-fit: cover;height:100%" class="d-block w-100" src="../../assets/img/ori29 (2 of 16) - Copy.jpg" alt="Second slide">
             </mdb-carousel-item>
             <!-- Slide 3 -->
             <mdb-carousel-item style="height:1300px;width:100%">
-                <img style="object-fit: cover;height:100%" class="d-block w-100" src="https://live.staticflickr.com/65535/51854555694_e69c59e5f9_k.jpg" alt="Second slide">
+                <img style="object-fit: cover;height:100%" class="d-block w-100" src="../../assets/img/ori29 (16 of 16).jpg" alt="Second slide">
             </mdb-carousel-item>
             <!-- Slide 4 -->
             <mdb-carousel-item style="height:1300px;width:100%">
-                <img style="object-fit: cover;height:100%" class="d-block w-100" src="https://live.staticflickr.com/65535/51854887640_9c9f098dbe_k.jpg" alt="Second slide">
+                <img style="object-fit: cover;height:100%" class="d-block w-100" src="../../assets/img/ori29 (12 of 16).jpg" alt="Second slide">
             </mdb-carousel-item>
             <!-- Slide 5 -->
             <mdb-carousel-item style="height:1300px;width:100%">
-                <img style="object-fit: cover;height:100%" class="d-block w-100" src="https://live.staticflickr.com/65535/51854305488_3006164982_k.jpg" alt="Second slide">
+                <img style="object-fit: cover;height:100%" class="d-block w-100" src="../../assets/img/ori29 (11 of 16).jpg" alt="Second slide">
             </mdb-carousel-item>
             <!-- Slide 6 -->
             <mdb-carousel-item style="height:1300px;width:100%">
-              <img style="object-fit: cover;height:100%" class="d-block w-100" src="https://live.staticflickr.com/65535/51854884850_aa5529573d_h.jpg" alt="Second slide">
+              <img style="object-fit: cover;height:100%" class="d-block w-100" src="../../assets/img/ori31 (25 of 32).jpg" alt="Second slide">
             </mdb-carousel-item>
 
         </mdb-carousel>
