--- a/src/app/student/forgotten/forgotten/forgotten.component.html
+++ b/src/app/student/forgotten/forgotten/forgotten.component.html
@@ -1,5 +1,5 @@
 
-<img src="../../../assets/img/pexels-keira-burton-6084268.jpg" style="z-index: -2;object-fit: cover;position: absolute;width: 100%;height: 100vh;">
+<img src="../../../assets/img/ori31 (26 of 32).jpg" style="z-index: -2;object-fit: cover;position: absolute;width: 100%;height: 100vh;">
 <div class="heading" style=" text-align: center;line-height: 0.8;text-shadow: 2px 2px #0d4794; color: rgb(255, 255, 255);display: flex; justify-content: center;font-size: 4vw ;font-weight:500;margin-top: 5%; margin-bottom: 5%;">TUT Online Orientation</div>
 <div *ngIf="step == 1" class="container page-container" style="background-color: white; width: 30rem;border-radius: 25px;margin-top: 2%;box-shadow: 10px 24px 70px -18px rgba(0, 0, 0, 0.32);">
     <div style="width:70%;margin-left: 15%;">
