--- a/src/app/campus/campus.component.html
+++ b/src/app/campus/campus.component.html
@@ -9,17 +9,20 @@
   <!-- Progress Stepper Bar -->
   <mat-card style="align-content: center;">
     <mat-card-title style="align-content: center; font-size:medium;">Online Orientation Progress.</mat-card-title>
-    <mat-vertical-stepper fxLayout="column" [linear]="isLinear" #stepper>
-      <mat-step label='Start'>
+    <mat-vertical-stepper fxLayout="column" #stepper linear>
+      
+      <mat-step label='Start' [completed]="completed">
         
           <ng-template matStepLabel style="background-color: #0d4794;">Start Orientation</ng-template>
           <p>Click next to start the orientation.</p>
           <div>
-            <button mat-button matStepperNext style="background-color: #de0428; color: white;">Next</button>
+            <button (click)="Next()" mat-button matStepperNext style="background-color: #de0428; color: white;">Next</button>
           </div>
         
       </mat-step>
-      <mat-step label='Select Campus'>
+
+
+      <mat-step label='Select Campus' [completed]="completed">
         
         <ng-template matStepLabel>Select Campus</ng-template>
         <p>Please choose your campus below to continue.</p>
@@ -39,11 +42,14 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193608.30501934033!2d27.991585828177655!3d-25.6213319067973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95621c9c7f5eb5%3A0x18ee995aaa96adda!2sTUT%20Arcadia!5e0!3m2!1sen!2sza!4v1643188613771!5m2!1sen!2sza" width="80%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         -->
         <div class="stepper-next">
-          <button mat-button matStepperNext style="background-color: #de0428; color: white;">Next</button>
+          <button (click)="Next()" mat-button matStepperNext style="background-color: #de0428; color: white;">Next</button>
         </div>
+
+        
         
       </mat-step>
-      <mat-step label='Select Faculty'>
+
+      <mat-step label='Select Faculty' [completed]="false">
         
         <ng-template matStepLabel>Select Faculty</ng-template>
         <p>Please choose your faculty below to continue.</p>
@@ -54,7 +60,7 @@
 
         <br>
         <div>
-          <button mat-button matStepperNext class="btn-2" style="background-color: #de0428; color: white;">Next</button>
+          <button (click)="Next()" mat-button matStepperNext class="btn-2" style="background-color: #de0428; color: white;">Next</button>
         </div>
 
       </mat-step>
