--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -9,30 +9,34 @@
         <p style="padding-top: 5px; font-size: 13px;  text-align: center;"> Step 1/2 </p>
         <span *ngIf="error" (click)="removeError()">{{ error }}</span>
         <form>
-            <!-- <div class="form-group">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Student Number</label>
+                <input type="email"  class="form-control" id="exampleInputStudNum" placeholder="Enter your student number" name="studNum" [(ngModel)]="studNum" required>
+            </div>
+             <div class="form-group">
                 <label for="exampleInputEmail1">First name</label>
-                <input type="email" class="form-control" id="exampleInputFirstname" placeholder="Enter your first name" name="firstname" [(ngModel)]="firstname" required>
+                <input type="email" class="form-control" id="exampleInputFirstname" placeholder="Enter your first name" name="firstName" [(ngModel)]="firstName" required>
             </div>
 
             <div class="form-group">
                 <label for="exampleInputEmail1">Last name</label>
                 <input type="email" class="form-control" id="exampleInputLastname" placeholder="Enter your last name" name="lastName" [(ngModel)]="lastName" required>
-            </div> -->
+            </div> 
 
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="email" [(ngModel)]="email" required>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email" name="email" [(ngModel)]="email" required>
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
 
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control"  id="exampleInputPassword1" placeholder="Password" name="password" [(ngModel)]="password" required>
+                <input type="password" class="form-control"  id="exampleInputPassword1" placeholder="Enter your password" name="password" [(ngModel)]="password" required>
             </div>
 
             <div class="form-group">
                 <label for="exampleInputPassword1">Confirm Password</label>
-                <input type="password" class="form-control"  id="exampleInputPassword2" placeholder="Confirm Password" name="password" [(ngModel)]="password2" required>
+                <input type="password" class="form-control"  id="exampleInputPassword2" placeholder="Confirm your password" name="password" [(ngModel)]="password2" required>
             </div>
 
             <button type="submit" style="margin-left: 35%; margin-top: 7%;margin-bottom: -9%;" class="btn btn-primary" (click)="sendOTP()">Next</button>
