--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -76,11 +76,17 @@
             
 
         </div>
-        <div style="display: flex; justify-content: center;">
+       <!-- <div style="display: flex; justify-content: center;">
               <a routerLink="student-login" style=" justify-content: center;border-radius: 25px; border-width: 0px;" class="btn btn-default btn-lg page-scroll">Start Orientation
             
                 <em class="ml-2" data-feather="arrow-right"></em>
             </a> 
+        </div>-->
+        <div style="display: flex; justify-content: center;">
+          <a routerLink="student-login" style=" justify-content: center;border-radius: 25px; border-width: 20px;" class="myButton">Start Orientation
+            
+            <em class="ml-2" data-feather="arrow-right"></em>
+        </a>
         </div>
          
     </div>
