--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -43,6 +43,30 @@ header p {
     font-size: 16px;
     transition: all 0.5s;
     border-radius: 4px;
+    
+}
+.myButton{
+    display: flex;  
+    justify-content: center;  
+    align-items: center;
+    border:none;
+    outline: none;
+    text-align: center;
+    color:#ffc000;
+    font-weight:bold;
+    height: 80px;
+    width: 250px;
+    background-color: #0d4794;
+    font-size: 25px;
+    border-radius: 20px;
+}
+.myButton:hover{
+    color:#ffc000;
+    background-color: #0d4794;
+    box-shadow: 0 0 100px 30px #0d4794,
+			0 0 100px 30px #0d4794,
+			0 0 100px 30px #0d4794,
+			0 0 100px 30px #0d4794;  
 }
 
 .btn-default:hover,
@@ -108,6 +132,7 @@ button:focus::after {
     position: relative;
     font-size: large;
     border-radius: 800px;
+    
 }
 
 .btn:hover,
@@ -115,13 +140,9 @@ button:focus::after {
     opacity: 0.8;
     color: #ffffff;
     transform: translateY(-6px);
+    
 }
 
-.btn:hover,
-.btn:focus {
-    color: #ffffff;
-    transform: translateY(-6px);
-}
 
 .btn.block {
     display: block !important;
