--- a/src/app/student/sign-in/sign-in.component.html
+++ b/src/app/student/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<img src="../../../assets/img/pexels-keira-burton-6084268.jpg" style="object-fit: cover;position: absolute;width: 100%;height: 100vh;">
+<img src="https://dh2dlbjd2qx17.cloudfront.net/img/Orientation-blurred.jpg" style="object-fit: cover;position: absolute;width: 100%;height: 100vh;">
 <div style="overflow-x: hidden;">
 
 <div class="container page-container">
