--- a/src/app/survey/humanities-north-survey/humanities-north-survey.component.css
+++ b/src/app/survey/humanities-north-survey/humanities-north-survey.component.css
@@ -20,6 +20,11 @@ mat-card{
     margin-right: auto;
 }
 
+mat-form-field{
+  width: 80%;
+  font-size: medium;
+}
+
 .btn-primary {
     background-color:#0d4794;
 }
