--- a/src/app/survey/ict-plk-survey/ict-plk-survey.component.css
+++ b/src/app/survey/ict-plk-survey/ict-plk-survey.component.css
@@ -15,6 +15,11 @@ mat-card{
    margin-top: 20px; 
 }
 
+mat-form-field{
+  width: 80%;
+  font-size: medium;
+}
+
 .button-grp{
     margin-left: auto;
     margin-right: auto;
