--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -24,14 +24,14 @@
     <!-- Nav Item - Pages Collapse Menu -->
     
     <li class="nav-item">
-        <a class="nav-link" routerLink="/survey-data">
+        <a class="nav-link" routerLink="/generate-report">
             <mat-icon >picture_as_pdf</mat-icon>
             <span class="textAlign">Generate Report</span>
         </a>
     </li>
 
     <li class="nav-item">
-        <a class="nav-link" routerLink="/survey-data">
+        <a class="nav-link" routerLink="/track-student">
             <mat-icon>timeline</mat-icon>
             <span class="textAlign">Tracking</span>
         </a>
@@ -47,6 +47,13 @@
 
     <!-- Divider -->
     <hr class="sidebar-divider">
+
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/upload-cnt">
+            <mat-icon >play_circle_filled</mat-icon>
+            <span class="textAlign">Upload Content</span>
+        </a>
+    </li>
 
     <!-- Sidebar Message -->
     <div class="sidebar-card d-none d-lg-flex">
