--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -83,7 +83,7 @@
             </a> 
         </div>-->
         <div style="display: flex; justify-content: center;">
-          <a routerLink="/student-login" style=" justify-content: center;border-radius: 25px; border-width: 20px;" class="myButton">Start Orientation
+          <a routerLink="/student-login" (click)="startOr()" style=" justify-content: center;border-radius: 25px; border-width: 20px;" class="myButton">Start Orientation
             
             <em class="ml-2" data-feather="arrow-right"></em>
         </a>
