--- a/src/app/campus/campus.component.html
+++ b/src/app/campus/campus.component.html
@@ -20,7 +20,7 @@
             <mat-icon>assignment_turned_in</mat-icon>
         </button>
         <button mat-menu-item>Campus Directions 
-            <mat-icon>info</mat-icon>
+            <mat-icon>location_on</mat-icon>
         </button>
         <button (click)="blog()" mat-menu-item>Blog  
             <mat-icon>view_agenda</mat-icon>
@@ -87,7 +87,7 @@
 
 
             <!-- STEP 4 WATCH VIDEOS ORIENTATION -->
-            <mat-step label="Watch Orientation Videos" [completed]="stepFourComplete">
+            <mat-icon>video_library</mat-icon> <mat-step label="Watch Orientation Videos" [completed]="stepFourComplete">
                 <p>Watch at least 15% of videos to continue</p>
 
                 <!---------------------------------------------------------------------------------------------------------->
