--- a/src/app/admin/survey-responses/survey-responses.component.html
+++ b/src/app/admin/survey-responses/survey-responses.component.html
@@ -24,9 +24,9 @@
                 <!-- Page Heading -->
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
                     <h1 class="h3 mb-0 text-gray-800"> Survey Data</h1>
-                    <a routerLink="/dashboard" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" >
+                    <a routerLink="/dashboard" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
                         <mat-icon style="position: absolute;">picture_as_pdf</mat-icon>
-                        <span style="margin-left: 30px;">Quick Generate Report</span> 
+                        <span style="margin-left: 30px;">Quick Generate Report</span>
                     </a>
                 </div>
                 <!-- picture_as_pdf -->
@@ -35,11 +35,11 @@
                         <div class="search-hero">
                             <input class="form-control" type="text" name="search" autocomplete="off" placeholder="Start searching for a response by name or cell number or faculty">
                         </div>
-                        <table class="table table-striped">
+                        <table class="table  table-striped">
                             <thead>
                                 <tr>
                                     <th>Name</th>
-                                    <th>Cell Number</th>
+                                    <th>Campus</th>
                                     <th>Faculty</th>
                                     <th>Question 1</th>
                                     <th>Question 2</th>
@@ -66,7 +66,6 @@
                         </table>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
