--- a/src/app/admin/sideTabs/tracking-st/tracking-st.component.html
+++ b/src/app/admin/sideTabs/tracking-st/tracking-st.component.html
@@ -45,7 +45,7 @@
                         <input matInput placeholder="Activity" [(ngModel)]="filterEntity.activity">
                     </mat-form-field> 
                     <mat-form-field style="width: 10%;" appearance="outline">
-                        <input (click)="time()" type="datetime-local" matInput placeholder="Date and Time" [(ngModel)]="filterEntity.datetime">
+                        <input type="datetime-local" matInput placeholder="Date and Time" [(ngModel)]="filterEntity.datetime">
                     </mat-form-field> 
 
                 </div>
