--- a/src/app/admin/sideTabs/tracking-st/tracking-st.component.html
+++ b/src/app/admin/sideTabs/tracking-st/tracking-st.component.html
@@ -24,85 +24,92 @@
                 <!-- Page Heading -->
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
                     <h1 class="h3 mb-0 text-gray-800">Generate Report</h1>
-                   
+
                 </div>
                 <!-- picture_as_pdf -->
                 <div class="row">
                     <label>Filtering</label>
                     <mat-form-field style="width: 5%;" appearance="outline">
                         <input matInput placeholder="no" [(ngModel)]="filterEntity.id">
-                    </mat-form-field> 
+                    </mat-form-field>
                     <mat-form-field style="width: 10%;" appearance="outline">
                         <input matInput placeholder="First name" [(ngModel)]="filterEntity.firstname">
                     </mat-form-field>
                     <mat-form-field style="width: 10%;" appearance="outline">
                         <input matInput placeholder="Last name" [(ngModel)]="filterEntity.lastname">
-                    </mat-form-field> 
+                    </mat-form-field>
                     <mat-form-field style="width: 10%;" appearance="outline">
                         <input matInput placeholder="Student number" [(ngModel)]="filterEntity.studNum">
-                    </mat-form-field> 
+                    </mat-form-field>
                     <mat-form-field style="width: 10%;" appearance="outline">
                         <input matInput placeholder="Activity" [(ngModel)]="filterEntity.activity">
-                    </mat-form-field> 
+                    </mat-form-field>
                     <mat-form-field style="width: 10%;" appearance="outline">
                         <input type="datetime-local" matInput placeholder="Date and Time" [(ngModel)]="filterEntity.datetime">
-                    </mat-form-field> 
+                    </mat-form-field>
+                    <mat-form-field style="width: 13%; overflow: hidden" appearance="outline">
+                        <input [hidden]="true" matInput style="display: none;">
+                        <mat-checkbox color="warn" (click)="groupEvent()" [(ngModel)]="groupValue">Group Tracks</mat-checkbox>
+                    </mat-form-field>
+
+                    <!--  -->
+
 
                 </div>
-                   
 
-        <div>
-            <table mat-table matTableFilter [exampleEntity]="filterEntity" [filterType]="filterType" [dataSource]="dataSource" matSort>
 
-                <!-- Position Column -->
-                <ng-container matColumnDef="id" >
-                   
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> No. 
-                        
-                </th>
-                    <td mat-cell *matCellDef="let element"> {{element.id}}</td>
-                    
-                </ng-container>
-                
+                <div>
+                    <table mat-table matTableFilter [exampleEntity]="filterEntity" [filterType]="filterType" [dataSource]="dataSource" matSort>
 
-                <!--Firstname Name Column -->
-                <ng-container matColumnDef="firstname">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
-                </ng-container>
+                        <!-- Position Column -->
+                        <ng-container matColumnDef="id">
 
-                <!-- Last name Column -->
-                <ng-container matColumnDef="lastname">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
-                </ng-container>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> No.
 
-                <!-- Student number Column -->
-                <ng-container matColumnDef="studNum">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Student Number </th>
-                    <td mat-cell *matCellDef="let element"> {{element.studNum}} </td>
-                </ng-container>
+                            </th>
+                            <td mat-cell *matCellDef="let element"> {{element.id}}</td>
 
-                <!-- Student number Column -->
-                <ng-container matColumnDef="activity">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Activity </th>
-                    <td mat-cell *matCellDef="let element"> {{element.activity}} </td>
-                </ng-container>
+                        </ng-container>
 
-                <!-- Student number Column -->
-                <ng-container matColumnDef="datetime">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Time And Date </th>
-                    <td mat-cell *matCellDef="let element"> {{element.datetime}} </td>
-                </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
+                        <!--Firstname Name Column -->
+                        <ng-container matColumnDef="firstname">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
+                            <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
+                        </ng-container>
 
-            <mat-paginator [pageSizeOptions]="[10, 15, 20, 25]" [length]="100" [pageSize]="10" style="margin-bottom: 5%;"></mat-paginator>
+                        <!-- Last name Column -->
+                        <ng-container matColumnDef="lastname">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+                            <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
+                        </ng-container>
+
+                        <!-- Student number Column -->
+                        <ng-container matColumnDef="studNum">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Student Number </th>
+                            <td mat-cell *matCellDef="let element"> {{element.studNum}} </td>
+                        </ng-container>
+
+                        <!-- Student number Column -->
+                        <ng-container matColumnDef="activity">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Activity </th>
+                            <td mat-cell *matCellDef="let element"> {{element.activity}} </td>
+                        </ng-container>
+
+                        <!-- Student number Column -->
+                        <ng-container matColumnDef="datetime">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Time And Date </th>
+                            <td mat-cell *matCellDef="let element"> {{element.datetime}} </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    </table>
+
+                    <mat-paginator [pageSizeOptions]="[10, 15, 20, 25]" [length]="100" [pageSize]="10" style="margin-bottom: 5%;"></mat-paginator>
+                </div>
+
+            </div>
         </div>
-
     </div>
-</div>
-</div>
 </div>
